--- a/CMakeLists.txt.dist
+++ b/CMakeLists.txt.dist
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(sfml_test)
+project(snake)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
