--- a/CMakeLists.txt.dist
+++ b/CMakeLists.txt.dist
@@ -9,7 +9,7 @@ add_executable(snake main.cpp)
 
 set(SFML_DIR "C:\\Users\\paul\\CLionProjects\\lib\\sfml\\GCC 7.3.0 MinGW (SEH) - 64-bit\\SFML-2.5.1\\lib\\cmake\\SFML")
 
-target_link_libraries(snake sfml-graphics)
+target_link_libraries(snake sfml-graphics sfml-audio)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 find_package(SFML 2.5 REQUIRED graphics network audio window system)
